<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Phoenix V</string>
    <string-array name="array_chat_background_names">
        <item>Однотонный</item>
        <item>Печеньки</item>
        <item>Линии</item>
        <item>Руны</item>
        <item>Свой…</item>
    </string-array>
    <string-array name="array_chat_background_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="preview_preview_size" translatable="false">
        <item>S: 75 px</item>
        <item>M: 130 px</item>
        <item>X: 604 px</item>
        <item>Y: 807 px</item>
        <item>Z: 1280 px</item>
    </string-array>
    <string-array name="preview_preview_size_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="array_photo_rounded_names">
        <item>Всегда скруглять</item>
        <item>Скруглять, если одно фото</item>
        <item>Не скруглять</item>
    </string-array>
    <string-array name="array_photo_rounded_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string name="dialogs">Диалоги</string>
    <string name="dialog_day_today">Сегодня</string>
    <string name="dialog_day_yesterday">Вчера</string>
    <string name="dialog_day_ten_days">За 10 дней</string>
    <string name="dialog_day_older">Старые</string>
    <string name="dialog_me">Я</string>
    <string name="attachments">[вложения]</string>
    <string name="forward_messages">[пересланные]</string>
    <string name="service_message">[служебное]</string>
    <string name="title_mssages">Сообщения</string>
    <string name="settings">Настройки</string>
    <string name="general_settings">Общие</string>
    <string name="other_settings">Другие</string>
    <string name="about_settings">О приложении</string>
    <string name="account_cache_cleaner">Очистить кэш для данного аккаунта</string>
    <string name="picture_cache_cleaner">Очистить кэш изображений</string>
    <string name="share_text">Поделиться приложением с друзьями</string>
    <string name="rate_text">Оценить приложение в Google Play</string>
    <string name="go_to_dialog">К диалогу</string>
    <string name="send">Отправить</string>
    <string name="text_hint">Сообщение</string>
    <string name="search_hint">Найти</string>
    <string name="sending">Отправка</string>
    <string name="in_order">В очереди</string>
    <string name="error">Ошибка</string>
    <string name="friends">Друзья</string>
    <string name="sending_message_failed">Отправка сообщения не удалась</string>
    <string name="try_again">Повторить</string>
    <string name="delete">Удалить</string>
    <string name="select_attachments">Выберите вложения</string>
    <string name="attachment_wall_post">Запись</string>
    <string name="attachment_document">Документ</string>
    <string name="attachment_documents">Документы</string>
    <string name="attachment_link">Ссылка</string>
    <string name="user_type_message">набирает сообщение…</string>
    <string name="load_more">Загрузить ещё</string>
    <string name="last_seen_sex_man">был: %1$s</string>
    <string name="last_seen_sex_woman">была: %1$s</string>
    <string name="last_seen_sex_unknown">был(-а): %1$s</string>
    <string name="online">Онлайн</string>
    <string name="offline">Не в сети</string>
    <string name="offline_hidden">Не в сети: скрыто</string>
    <string name="thank_you">На вашей стене создан пост с информацией о приложении. Спасибо большое за поддержку!</string>
    <string name="notif_setting_title">Уведомления</string>
    <string name="messages_in_dialogs_tite">Сообщения в диалогах</string>
    <string name="enable_dialogs_notif_title">Включить оповещения</string>
    <string name="enable_dialogs_sound_title">Звук</string>
    <string name="enable_dialogs_vibro_title">Вибро</string>
    <string name="enable_dialogs_led_title">Светодиод</string>
    <string name="messages_in_groupchat_tite">Сообщения в групповых беседах</string>
    <string name="enable_groupchat_notif_title">Включить оповещения</string>
    <string name="enable_groupchat_sound_title">Звук</string>
    <string name="enable_groupchat_vibro_title">Вибро</string>
    <string name="enable_groupchat_led_title">Светодиод</string>
    <string name="enter_dir_name">Введите имя новой папки</string>
    <string name="cannot_create_catalog">Каталог уже присутствует или Вы ввели недопустимое имя каталога</string>
    <string name="path_not_exist">Путь не существует или не может быть прочитан</string>
    <string name="create_dir">Новая папка</string>
    <string name="quick_answer_title">Быстрый ответ</string>
    <string name="select_image_size_summary">Рекомендуется средний</string>
    <string name="select_image_size_title">Размер отправляемого изображения</string>
    <string name="night_mode_title">Ночной режим</string>
    <string name="amoled_theme">AMOLED-тема</string>
    <string name="emojis_type_title">Использовать системные смайлы</string>
    <string name="emojis_recents">Показывать последние стикеры</string>
    <string name="appearance_settings">Внешний вид</string>
    <string name="behaviour_settings">Поведение</string>
    <string name="music_settings">Плеер</string>
    <string name="drawer_categories_title">Элементы всплывающего меню</string>
    <string name="drawer_categories_summary">Выберите элементы, которые будут отображаться в главном меню приложения</string>
    <string name="send_on_enter_title">Отправлять по кнопке Enter</string>
    <string name="default_category_summary">Выберите страницу, которая будет показана при запуске приложения</string>
    <string name="default_category_title">Стартовая страница</string>
    <string name="drawer_feedback">Уведомления</string>
    <string name="open_full_player">Открыть плеер</string>
    <string name="play">Воспроизвести</string>
    <string name="copy_original_url">Прямая ссылка</string>
    <string name="button_yes">Да</string>
    <string name="button_cancel">Отмена</string>
    <string name="avatar_style_title">Стиль аватарок</string>
    <string name="search">Поиск</string>
    <string name="input">Ввод</string>
    <string name="set_default">Удалить фон (фото)</string>
    <string name="sidebar_settings">Всплывающее меню</string>
    <string name="custom_chat">Чаты</string>
    <string name="double_press_to_exit">Двойное нажатие для выхода из приложения</string>
    <string name="additional_settings">Дополнительные параметры</string>
    <string name="photo_swipe_pos_top_to_bottom">Свайп вниз чтобы закрыть фото</string>
    <string name="photo_swipe_pos_top_to_bottom_summary">Вместо свайпа вверх</string>
    <string name="security">Безопасность</string>
    <string name="chat_background">Фон</string>
    <string name="chat_light_background">Дневной фон (фото)</string>
    <string name="chat_dark_background">Ночной фон (фото)</string>
    <string name="settings_show_logs_title" translatable="false">Логи</string>
    <string name="other">Другое</string>
    <string name="save">Сохранить</string>
    <string name="request_executor_title">Тестирование запросов</string>
    <string name="dev_settings">Для разработчиков</string>
    <string name="user_blacklist_title">Чёрный список</string>
    <string name="http_proxy">HTTP/HTTPS прокси</string>
    <string name="action_add">Добавить</string>
    <string name="get_bitrate">Узнать Битрейт</string>
    <string name="use_internal_downloader">Использовать внутренний загрузчик</string>
    <string name="use_internal_downloader_summary">Для видео и документов</string>
    <string name="audio_channel">Phoenix-Плеер</string>
    <string name="open_links_in_app">Открывать ссылки в приложении</string>
    <string name="force_hls">Принудительно потоковое аудио</string>
    <string name="force_cache">Принудительно слушать из загрузок</string>
    <string name="photo_preview_size_title">Размер предпросмотра фото</string>
    <string name="settings_keep_longpoll_title">Удерживать Longpoll</string>
    <string name="settings_no_push">Не принимать Push FCM уведомления</string>
    <string name="settings_keep_longpoll_summary">Поддерживать связь со службой уведомлений. ВНИМАНИЕ! Это может привести к увеличению потребления батареи!</string>
    <string name="close">Закрыть</string>
    <string name="choose_theme_title">Цветовая палитра</string>
    <string name="open_album">Открыть Альбом</string>
    <string name="get_lyrics_menu">Текст песни</string>
    <string name="get_recommendation_by_audio">Искать похожее</string>
    <string name="search_by_artist">Поиск по исполнителю</string>
    <string name="auto_update">Получать обновления</string>
    <string name="info_reading">Уведомлять о прочтении вашего сообщения</string>
    <string name="use_stop_audio">Стоп вместо паузы аудио</string>
    <string name="show_recent_dialogs">Отображать последние чаты</string>
    <string name="show_mini_player">Показывать мини-плеер</string>
    <string name="show_audio_top">Популярные треки</string>
    <string name="my_message_no_color">Отключить цвет исходящих сообщений</string>
    <string name="show_audio_cover">Обложки аудио</string>
    <string name="use_old_vk_api">Аудио с VK API 5.90</string>
    <string name="disable_history">Не показывать Истории</string>
    <string name="audio_round_icon">Круглые обложки аудио</string>
    <string name="custom_chat_color">Первый цвет фона</string>
    <string name="use_custom_chat_color">Задать цвет фона</string>
    <string name="custom_chat_color_second">Второй цвет фона</string>
    <string name="custom_chat_color_summary">Установите фон в "Однотонный", чтобы он стал градиентом</string>
    <string name="custom_message_color">Цвет исходящего сообщения</string>
    <string name="usage_custom_message_color">Задать цвет исходящего сообщения</string>
    <string name="enable_last_read">Быстрый переход к последнему прочитанному сообщению</string>
    <string name="show_profile_in_additional_page">Показывать профиль в всплывающем меню</string>
    <string name="restart_needed">Требуется перезапуск</string>
    <string name="disable_swipes_chat">Отключить свайпы для чатов</string>
    <string name="display_writing">Показывать набор сообщения</string>
    <string name="download_directory">Куда скачивать</string>
    <string name="music_dir">Музыка</string>
    <string name="photo_dir">Фото</string>
    <string name="video_dir">Видео</string>
    <string name="docs_dir">Документы</string>
    <string name="photo_to_user_dir">Сортировать фото по папкам</string>
    <string name="is_player_support_volume">Переключатель громкости в плеере</string>
    <string name="auto_read">Читать сообщения автоматически</string>
    <string name="for_wear">Для Wear OS</string>
    <string name="music_enable_toolbar">Включить тулбар для списка музыки</string>
    <string name="webview_night_mode">Включить ночной режим WebView</string>
    <string name="webview_summary">Красить страницы в зависимости от темы</string>
    <string name="be_online">Отправлять запрос online</string>
    <string name="photo_rounded_view">Скругление краёв изображений</string>
    <string name="load_history_notif">Превью диалога в уведомлениях</string>
    <string name="load_history_notif_summary">Отображать последние 5 сообщений из чата</string>
    <string name="mp3_friendly">Если не работает скачивание</string>
    <string name="debug_mode">Режим отладки</string>
</resources>