<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/play_item_audio"
        android:title="@string/play" />

    <item
        android:id="@+id/add_item_audio"
        android:title="@string/action_add" />

    <item
        android:id="@+id/save_item_audio"
        android:title="@string/save" />

    <item
        android:id="@+id/get_recommendation_by_audio"
        android:title="@string/get_recommendation_by_audio" />

    <item
        android:id="@+id/open_album"
        android:title="@string/open_album" />

    <item
        android:id="@+id/get_lyrics_menu"
        android:title="@string/get_lyrics_menu" />

    <item
        android:id="@+id/copy_url"
        android:title="@string/copy_original_url" />
    <item
        android:id="@+id/bitrate_item_audio"
        android:title="@string/get_bitrate" />

    <item
        android:id="@+id/search_by_artist"
        android:title="@string/search_by_artist" />
</menu>