<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/miniplayer_layout"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    android:background="?attr/message_bubble_color"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/item_audio_play"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_audio_play_cover"
            android:contentDescription="@string/play"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/item_audio_play_icon"
            android:contentDescription="@string/play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/song" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mini_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <SeekBar
            android:id="@+id/SeekBar01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="1000" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/open_player"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:backgroundTint="?attr/colorSecondary"
        android:contentDescription="@string/open_full_player"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/audio_player" />

    <ImageButton
        android:id="@+id/close_player"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:backgroundTint="?colorPrimary"
        android:contentDescription="@string/close"
        android:scaleType="centerInside"
        android:src="@drawable/close_mini" />
</LinearLayout>
